--- a/templates/_includes/base.html
+++ b/templates/_includes/base.html
@@ -23,8 +23,7 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-   
-    <!-- BOOTSTRAP EXAMPLES -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-- BOOTSTRAP EXAMPLES -->
     <link href="{% static 'css/sidebar.css' %}" rel="stylesheet" type="text/css">
 
     <!-- MATERIAL ICONS -->
