--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -1,60 +1,45 @@
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Add New Contact</h4>
-            <p class="card-description">Enter contact details </p>
-
-                <form class="forms-sample" method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="form-group">
-                                <label for="{{ form.name.id_for_label }}">Name</label>
-                                {{ contact_form.name }}
-                            </div>
-                            <div class="form-group">
-                                <label for="{{ form.designation.id_for_label }}">Designation</label>
-                                {{ contact_form.designation }}
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="form-group float-end">
-                                <label for="{{ form.profile_picture.id_for_label }}">Upload Picture</label>
-                                {{ contact_form.profile_picture }}
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="{{ contact_form.organization.id_for_label }}">Organization</label>
-                        {{ contact_form.organization }}
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="{{ contact_form.mobile_number.id_for_label }}">Mobile Number:</label>
-                                {{ contact_form.mobile_number }}
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="{{ contact_form.alt_number.id_for_label }}">Alternate Mobile Number:</label>
-                                {{ contact_form.alt_number }}
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="{{ contact_form.address.id_for_label }}">Address:</label>
-                        {{ contact_form.address }}
-                    </div>
-                    <button type="submit" class="btn btn-gradient-primary me-2">Save Contact</button>
-                    <a href="{{ request.META.HTTP_REFERER }}" type="button" class="btn btn-light">Cancel</a>
-
-                </form>
-    
-
+<div class="row">
+    <div class="col-8">
+        <div class="form-group">
+            <label for="{{ form.name.id_for_label }}">Name *</label>
+            {{ contact_form.name }}
+        </div>
+        <div class="form-group">
+            <label for="{{ form.designation.id_for_label }}">Designation</label>
+            {{ contact_form.designation }}
+        </div>
+    </div>
+    <div class="col-4">
+        <div class="form-group float-end">
+            <label for="{{ form.profile_picture.id_for_label }}">Upload Picture</label>
+            {{ contact_form.profile_picture }}
         </div>
     </div>
 </div>
 
+<div class="form-group">
+    <label for="{{ contact_form.organization.id_for_label }}">Organization *</label>
+    {{ contact_form.organization }}
+</div>
+<div class="row">
+    <div class="col">
+        <div class="form-group">
+            <label for="{{ contact_form.mobile_number.id_for_label }}">Mobile Number *</label>
+            {{ contact_form.mobile_number }}
+        </div>
+    </div>
+    <div class="col">
+        <div class="form-group">
+            <label for="{{ contact_form.alt_number.id_for_label }}">Alternate Mobile Number</label>
+            {{ contact_form.alt_number }}
+        </div>
+    </div>
+</div>
+<div class="form-group">
+    <label for="{{ contact_form.email.id_for_label }}">Email</label>
+    {{ contact_form.email }}
+</div>
+<div class="form-group">
+    <label for="{{ contact_form.address.id_for_label }}">Address</label>
+    {{ contact_form.address }}
+</div>
