--- a/contact/templates/contact/create_view.html
+++ b/contact/templates/contact/create_view.html
@@ -25,6 +25,21 @@
 
 {% block content %}
 <div class="form-container">
-  {% include 'contact/contact_form.html' %}
+  <div class="col-12 grid-margin stretch-card">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Add New Contact</h4>
+        <p class="card-description">Enter contact details </p>
+
+        <form class="forms-sample" method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          {% include 'contact/contact_form.html' %}
+          <button type="submit" class="btn btn-gradient-primary me-2">Save Contact</button>
+          <a href="{% url 'contact:list' %}" type="button" class="btn btn-light">Cancel</a>
+        </form>
+        
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
