--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -27,121 +27,102 @@
 </ul>
 {% endblock %}
 
-{% block top_nav %}
-<div class="d-flex justify-content-end mt-3">
-    <div class="w-100 mr-3">
-        Prospect Overview / Prospect List
-        <h2>{{ title }}</h2>
-    </div>
-    <div class="bordered-form d-flex align-items-center">
-        <form class="form-inline">
-            <input class="form-control mr-sm-2 bordered-input" type="search" placeholder="Search" aria-label="Search"
-                oninput="searchFunction()">
-        </form>
-        <span class="material-symbols-outlined notifications-icon align-middle">notifications</span>
-        <span class="material-symbols-outlined align-middle">settings</span>
-        <div class="dropdown">
-            <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-            </a>
-            <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Log out</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-{% endblock %}
-
-{% block side_nav %}
-{% include '_partials/sidebar.html' %}
-{% endblock %}
-
 {% block content %}
-<a href="{% url 'prospect:create' %}" class="btn btn-primary">
-    <i class="fa-solid fa-plus me-2"></i>
-    New Prospect
-</a>
-<h5> List of prospects</h5>
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">NAME</th>
-            <th scope="col">LOCATION</th>
-            <th scope="col">CONTACT PERSON</th>
-            <th scope="col">STATUS</th>
-            <th scope="col">REMARKS</th>
-            <th scope="col">ACTIONS</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for prospect in prospects %}
-
-        <tr>
-            <td>{{ prospect.prospect_name }}</td>
-            <td>{{ prospect.street_loc }}, <br> {{ prospect.city }}, {{ prospect.state }} {{ prospect.country }}</td>
-            <td>
-                Vlad Mihalache
-                <br> <span class="material-symbols-outlined" style="font-size: 20px;">
-                    call
-                </span>(+91) 908765432
-            </td>
-            <td class>
-                <span
-                    style="background-color:#ACA4A6; border-radius: 45%; padding: 10px 15px; font-size: 16px;">Appointment
-                    Requested</span>
-                <button type="button" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top"
-                    title="To follow up after 2 weeks">
-                    <span class="material-symbols-outlined" style="margin-left: 10px ;">schedule</span>
-                </button>
-            </td>
-            <td>
-                <button type="button" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top"
-                    title="To follow up after 2 weeks">
-                    <span class="material-symbols-outlined" style="font-size:24px;">
-                        info
-                    </span>
-                </button>
-            </td>
-            <td>
-                <div class="dropdown">
-                    <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
-                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 0;">
-                        <span class="material-symbols-outlined" style="font-size:24px;">
-                            more_vert
-                        </span>
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">
-                            <span class="material-symbols-outlined">
-                                edit
-                            </span>
-                            Edit info
-                        </a>
-                        <a class="dropdown-item" href="#">
-                            <span class="material-symbols-outlined">
-                                change_circle
-                            </span>
-                            Change status
-                        </a>
-                        <a class="dropdown-item" href="#">
-                            <span class="material-symbols-outlined">
-                                info_i
-                            </span>
-                            Update remarks
-                        </a>
-                    </div>
+<div class="row">
+    <div class="col-lg-12 grid-margin stretch-card">
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-8 col-lg-6">
+              <form method="GET">
+                <div class="input-group">
+                  <input type="search" class="form-control" placeholder="Search" name="search" value="{{ request.GET.search }}">
+                  <button type="submit" class="btn btn-sm btn-light">
+                      <i class="mdi mdi-magnify"></i>
+                  </button>
                 </div>
-            </td>
-        </tr>
-        {% endfor %}
-        <!-- Add more rows as needed -->
-    </tbody>
-</table>
-
+              </form>
+            </div>
+            <div class="col-4 col-lg-6">
+              <a href="{% url 'prospect:create' %}" class="btn btn-gradient-primary float-end">
+                <i class="mdi mdi-plus me-2"></i>
+                New Prospect
+              </a>
+            </div>
+          </div>
+          <table class="table table-hover mt-3">
+            <thead>
+              <tr>
+                <th>NAME</th>
+                <th>LOCATION</th>
+                <th>CONTACT PERSONS</th>
+                <th>STATUS</th>
+                <th>CRM</th>
+                <th>REMARKS</th>
+                <th class="text-center">ACTIONS</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for prospect in prospects %}
+              <tr>
+                <td>
+                    {{ prospect.name }}
+                </td>
+                <td>{{ prospect.street}}, <br> {{ prospect.city }}, {{ prospect.state }} {{ prospect.country }}</td>
+                <td>
+                  {% for contact in contact_persons %}
+                  <div class="contact-group">
+                    <div>
+                      <i class="mdi mdi-email-outline"></i>{{ contact.email }}
+                    </div>
+                    <div>
+                      <i class="mdi mdi-cellphone-android"></i>(+91) {{ contact.mobile_number }}
+                    </div>
+                  </div>
+                  {% endfor %}
+                </td>
+                <td></td>
+                <td>{{ prospect.name }}</td>
+                <td>
+                    <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ prospect.remarks }}sdasd">
+                    <i class="mdi mdi-information-outline fs-4"></i>
+                    </a>
+                </td>
+                <td class="text-center">
+                    <div class="dropdown">
+                        <button class="btn p-0" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="mdi mdi-dots-vertical"></i>
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">
+                                <i class="mdi mdi-pencil-box-outline me-2"></i>
+                                Edit info
+                            </a>
+                            <a class="dropdown-item" href="#">
+                                <i class="mdi mdi-information-outline me-2"></i>
+                                Update remarks
+                            </a>
+                            <a class="dropdown-item" href="#">
+                                <i class="mdi mdi-account-convert me-2"></i>
+                                Re-assign CRM
+                            </a>
+                            
+                            <a class="dropdown-item border-top" href="#">
+                                <i class="mdi mdi-refresh me-2"></i>
+                                Change status
+                            </a>
+                        </div>
+                    </div>
+                </td>
+                
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          {% include '_partials/_pagination.html' %}
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
