--- a/prospect/templates/prospect/create_view.html
+++ b/prospect/templates/prospect/create_view.html
@@ -40,6 +40,8 @@
             <p class="card-description">Contact Person 1</p>
             {% include 'prospect/poc_form.html' %}
             
+            <p class="card-description">Contact Person 2</p>
+
 
             <button type="submit" class="btn btn-primary">Save Prospect</button>
             <a href="{% url 'prospect:list' %}" type="button" class="btn btn-light">Cancel</a>
