--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -53,25 +53,31 @@
           <table class="table table-hover mt-3">
             <thead>
               <tr>
+                <th class="sl-col">#</th>
                 <th>NAME</th>
-                <th>LOCATION</th>
                 <th>CONTACT PERSONS</th>
                 <th>STATUS</th>
                 <th>CRM</th>
-                <th>REMARKS</th>
-                <th class="text-center">ACTIONS</th>
+                <th class="remarks-col">REMARKS</th>
+                <th class="actions-col">ACTIONS</th>
               </tr>
             </thead>
             <tbody>
             {% for prospect in prospects %}
               <tr>
+                <td class="sl-col">{{ forloop.counter0 | add:page_obj.start_index }}</td>
                 <td>
+                  <div class="name-group">
                     {{ prospect.name }}
+                    <div class="description">
+                    {{ prospect.street}}, {{ prospect.city }}, <br>{{ prospect.state }} {{ prospect.country }}
+                    </div>
+                  </div>
                 </td>
-                <td>{{ prospect.street}}, <br> {{ prospect.city }}, {{ prospect.state }} {{ prospect.country }}</td>
                 <td>
-                  {% for contact in contact_persons %}
+                  {% for contact in prospect.prospect_poc.all %}
                   <div class="contact-group">
+                    {{ contact.name }}
                     <div>
                       <i class="mdi mdi-email-outline"></i>{{ contact.email }}
                     </div>
@@ -79,16 +85,21 @@
                       <i class="mdi mdi-cellphone-android"></i>(+91) {{ contact.mobile_number }}
                     </div>
                   </div>
+                  {% if not forloop.last %}
+                    <hr>                            
+                  {% endif %}
                   {% endfor %}
                 </td>
                 <td></td>
-                <td>{{ prospect.name }}</td>
+                <td></td>
                 <td>
-                    <a href="" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ prospect.remarks }}sdasd">
-                    <i class="mdi mdi-information-outline fs-4"></i>
+                  {% if prospect.remarks %}
+                    <a data-bs-toggle="tooltip" data-bs-placement="top" href="" title="{{ prospect.remarks }}">
+                      <i class="mdi mdi-information-outline fs-4"></i>
                     </a>
+                  {% endif %}
                 </td>
-                <td class="text-center">
+                <td class="actions-col">
                     <div class="dropdown">
                         <button class="btn p-0" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
