--- a/contact/templates/contact/list_view.html
+++ b/contact/templates/contact/list_view.html
@@ -48,10 +48,10 @@
             <tr>
               <th class="sl-col table-photo">#</th>
               <th>NAME & DESIGNATION</th>
-              <th>ORGANIZATION</th>
-              <th>ADDRESS</th>
+              <th class="org-col">ORGANIZATION</th>
+              <th class="address-col">ADDRESS</th>
               <th>CONTACT</th>
-              <th class="text-center">ACTIONS</th>
+              <th class="actions-col text-center">ACTIONS</th>
             </tr>
           </thead>
           <tbody>
