--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -47,7 +47,7 @@
           <thead>
             <tr>
               <th class="sl-col">#</th>
-              <th>NAME</th>
+              <th class="name-col">NAME</th>
               <th>CONTACT PERSONS</th>
               <th class="status-col">STATUS</th>
               <th>CRM</th>
@@ -63,7 +63,7 @@
                 <div class="name-group">
                   {{ prospect.name }}
                   <div class="description">
-                    {{ prospect.street}}, {{ prospect.city }}, <br>{{ prospect.state }} {{ prospect.country }}
+                    {{ prospect.address }}, {{ prospect.city }}, <br>{{ prospect.state }} {{ prospect.country }}
                   </div>
                 </div>
               </td>
