--- a/prospect/templates/prospect/prospect_form.html
+++ b/prospect/templates/prospect/prospect_form.html
@@ -38,8 +38,8 @@
 <div class="row">
   <div class="col-12 col-md-6">
     <div class="form-group">
-      <label for="{{ prospect_form.street.id_for_label }}">Street/Locality *</label>
-      {{ prospect_form.street }}
+      <label for="{{ prospect_form.address.id_for_label }}">Address *</label>
+      {{ prospect_form.address }}
     </div>
   </div>
   <div class="col-12 col-md-6">
