--- a/templates/base.html
+++ b/templates/base.html
@@ -384,6 +384,7 @@
     <!-- Custom js for this page -->
     <script src="{% static 'js/dashboard.js' %}"></script>
     <script src="{% static 'js/todolist.js' %}"></script>
+    <script src="{% static 'js/app.js' %}"></script>
     <!-- End custom js for this page -->
   </body>
 </html>
