--- a/contact/templates/contact/edit_view.html
+++ b/contact/templates/contact/edit_view.html
@@ -31,12 +31,12 @@
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Edit Contact</h4>
+        <h4 class="card-title">Edit CONTACT</h4>
         <p class="card-description">Update contact details </p>
         <form class="forms-sample" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {% include 'contact/contact_form.html' %}
-          <button type="submit" class="btn btn-gradient-primary me-2">Update Contact</button>
+          <button type="submit" class="btn btn-gradient-primary me-2">Update CONTACT</button>
           <a href="{% url 'contact:list' %}" type="button" class="btn btn-light">Cancel</a>
         </form>
       </div>
