--- a/customer/templates/customer/onboard_view.html
+++ b/customer/templates/customer/onboard_view.html
@@ -31,11 +31,11 @@
           <h4 class="card-title text-center">Let's get started with the onboarding process</h4>
           <p class="card-description text-center">Follow the 3-step process to onboard the client</p>
           
-          <form class="forms-sample border-top py-5" id="customerForm" action="{% url 'customer:onboard' %}" method="POST" data-url="{% url 'customer:ajax-load-states' %}" enctype="multipart/form-data">
+          <form class="forms-sample border-top py-5" action="{% url 'customer:onboard' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <h4 class="card-title text-center">Customer Info</h4>
             {% include 'customer/legal_info_form.html' %}
-            <button type="submit" class="btn btn-gradient-primary me-2">Save Contact</button>
+            <button type="submit" class="btn btn-gradient-primary me-2">CONTINUE</button>
             <a href="{% url 'customer:list' %}" type="button" class="btn btn-light">Cancel</a>
           </form>
           
