--- a/prospect/templates/prospect/create_view.html
+++ b/prospect/templates/prospect/create_view.html
@@ -28,7 +28,7 @@
     <div class="col-12 grid-margin stretch-card">
       <div class="card">
         <div class="card-body">
-          <form class="forms-sample" method="POST" enctype="multipart/form-data">
+          <form class="forms-sample" method="POST" enctype="multipart/form-data" data-url="{% url 'misc:ajax-load-states' %}" >
             {% csrf_token %}
             <h4 class="card-title">Prospect Information</h4>
             <p class="card-description">Enter prospect details </p>
@@ -43,7 +43,7 @@
             <p class="card-description">Contact Person 2</p>
 
 
-            <button type="submit" class="btn btn-primary">Save Prospect</button>
+            <button type="submit" class="btn btn-primary me-3">Save Prospect</button>
             <a href="{% url 'prospect:list' %}" type="button" class="btn btn-light">Cancel</a>
           </form>
         </div>
