--- a/contact/templates/contact/list_view.html
+++ b/contact/templates/contact/list_view.html
@@ -92,7 +92,7 @@
                 </div>
               </td>
               <td class="text-center">
-                <a href="{% url 'contact:edit' contact.id %}" data-bs-toggle="tooltip" data-bs-placement="top"
+                <a href="{% url 'contact:edit' contact.uuid %}" data-bs-toggle="tooltip" data-bs-placement="top"
                   title="Edit contact">
                   <i class="mdi mdi-pencil"></i>
               </td>
