--- a/contact/templates/contact/edit_view.html
+++ b/contact/templates/contact/edit_view.html
@@ -36,8 +36,16 @@
         <form class="forms-sample" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {% include 'contact/contact_form.html' %}
-          <button type="submit" class="btn btn-gradient-primary me-2">Update CONTACT</button>
-          <a href="{% url 'contact:list' %}" type="button" class="btn btn-light">Cancel</a>
+
+          <div class="d-flex justify-content-between align-items-center">
+            <div>
+              <button type="submit" class="btn btn-gradient-primary me-2">Update CONTACT</button>
+              <a href="{% url 'contact:list' %}" type="button" class="btn btn-light">Cancel</a>
+            </div>
+            <div>
+              <a class="text-danger">Delete Contact</a>
+            </div>
+          </div>
         </form>
       </div>
     </div>
